--- a/client/src/app/form/form.component.html
+++ b/client/src/app/form/form.component.html
@@ -1,95 +1,102 @@
-<div class="row mb-2">
-  <div class="col">
-    <h1 class="mb-3">
-      Report Setting -<span class="ms-2 fw-bold" *ngIf="addMode; else formName"
-        >New</span
-      >
-      <ng-template #formName>
-        <span class="ms-2 fw-bold">{{ form?.name }}</span>
-      </ng-template>
-      <span
-        ><button
-          class="btn btn-success btn-sm ms-3"
-          type="submit"
-          form="formConfig"
-          [disabled]="!formConfig.dirty"
-        >
-          SAVE
-        </button></span
-      >
-    </h1>
-  </div>
-</div>
-<form
-  id="formConfig"
-  [formGroup]="formConfig"
-  (ngSubmit)="saveForm()"
-  class="w-75 mb-3"
->
-  <div class="row mb-4">
-    <div class="col-6">
-      <label for="name" class="mb-2"
-        >Name<i class="bi bi-card-text ms-2"></i
-      ></label>
-      <input
-        id="name"
-        type="text"
-        class="form-control"
-        placeholder="Name"
-        formControlName="name"
-      />
-    </div>
-    <div class="col-6">
-      <label for="description" class="mb-2"
-        >Description<i class="bi bi-card-text ms-2"></i
-      ></label>
-      <input
-        id="description"
-        type="text"
-        class="form-control"
-        placeholder="Description"
-        formControlName="description"
-      />
-    </div>
-  </div>
-  <div class="row" *ngIf="!addMode">
+<section id="reportConfig">
+  <div class="row mb-2">
     <div class="col">
-      <h2>
-        Controls<i class="bi bi-card-list ms-3"></i
-        ><span
+      <h1 class="mb-3">
+        Report Setting -<span
+          class="ms-2 fw-bold"
+          *ngIf="addMode; else formName"
+          >New</span
+        >
+        <ng-template #formName>
+          <span class="ms-2 fw-bold">{{ form?.name }}</span>
+        </ng-template>
+        <span
           ><button
-            type="button"
             class="btn btn-success btn-sm ms-3"
-            (click)="addControl()"
+            type="submit"
+            form="formConfig"
+            [disabled]="!formConfig.dirty"
           >
-            ADD
+            SAVE
           </button></span
         >
-      </h2>
-      <table class="table table-striped table-hover table-responsive">
-        <thead>
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col">Cell Source</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr
-            *ngFor="let control of form?.controls; let i = index"
-            (click)="selectControl(control)"
-            [routerLink]="['.']"
-            fragment="controlConfig"
-          >
-            <td>{{ control.name }}</td>
-            <td>{{ control.description }}</td>
-            <td>{{ control.cellSource }}</td>
-          </tr>
-        </tbody>
-      </table>
+      </h1>
     </div>
   </div>
-</form>
+  <form
+    id="formConfig"
+    [formGroup]="formConfig"
+    (ngSubmit)="saveForm()"
+    class="w-75 mb-3"
+  >
+    <div class="row mb-4">
+      <div class="col-6">
+        <label for="name" class="mb-2"
+          >Name<i class="bi bi-card-text ms-2"></i
+        ></label>
+        <input
+          id="name"
+          type="text"
+          class="form-control"
+          placeholder="Name"
+          formControlName="name"
+        />
+      </div>
+      <div class="col-6">
+        <label for="description" class="mb-2"
+          >Description<i class="bi bi-card-text ms-2"></i
+        ></label>
+        <input
+          id="description"
+          type="text"
+          class="form-control"
+          placeholder="Description"
+          formControlName="description"
+        />
+      </div>
+    </div>
+    <div class="row" *ngIf="!addMode">
+      <div class="col">
+        <h2>
+          Controls<i class="bi bi-card-list ms-3"></i
+          ><span
+            ><button
+              type="button"
+              class="btn btn-success btn-sm ms-3"
+              (click)="addControl()"
+            >
+              ADD
+            </button></span
+          >
+        </h2>
+        <table class="table table-striped table-hover table-responsive">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Description</th>
+              <th scope="col">Cell Source</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr
+              *ngFor="let control of form?.controls; let i = index"
+              (click)="selectControl(control)"
+              [routerLink]="['.']"
+              fragment="controlConfig"
+            >
+              <td>{{ control.name }}</td>
+              <td>{{ control.description }}</td>
+              <td>{{ control.cellSource }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </form>
+</section>
 <section id="controlConfig">
-  <app-form-control *ngIf="showControlConfig"></app-form-control>
+  <app-form-control
+    *ngIf="showControlConfig"
+    (controlDeleted)="onControlDeleted()"
+  ></app-form-control>
 </section>
