--- a/client/src/app/forms/forms.component.html
+++ b/client/src/app/forms/forms.component.html
@@ -1,7 +1,7 @@
 <div class="row mb-2">
   <div class="col">
-    <h1 class="display-4">
-      Report<span
+    <h1>
+      Reports<span
         ><button
           class="btn btn-success ms-3"
           routerLink="/form"
