--- a/client/src/app/_styles/form.styles.css
+++ b/client/src/app/_styles/form.styles.css
@@ -2,6 +2,7 @@ form {
   border: 1px solid rgba(236, 240, 241);
   padding: 25px;
   border-radius: 1rem;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 label {
