--- a/client/src/app/client/client.component.html
+++ b/client/src/app/client/client.component.html
@@ -1,4 +1,4 @@
-<h1 class="display-4">Client - {{ client?.name }}</h1>
+<h1>Client - {{ client?.name }}</h1>
 <form #generateReportForm="ngForm" class="w-75">
   <div class="row mb-4">
     <div class="col-4">
@@ -40,7 +40,7 @@
           type="submit"
           [disabled]="!sourceFile || selectedTemplate.length === 0"
         >
-          Create Report
+          CREATE REPORT
         </button></span
       >
     </div>
