--- a/client/src/app/clients/clients.component.html
+++ b/client/src/app/clients/clients.component.html
@@ -1,4 +1,4 @@
-<h1 class="display-4">Clients</h1>
+<h1>Clients</h1>
 <table class="table table-striped table-hover table-responsive">
   <thead>
     <tr>
