--- a/client/src/app/form-control/form-control.component.html
+++ b/client/src/app/form-control/form-control.component.html
@@ -3,7 +3,7 @@
     <h1 class="mb-3">
       Control Setting -<span
         class="ms-2 fw-bold"
-        *ngIf="addMode; else controlName"
+        *ngIf="mode === ControlMode.Add; else controlName"
         >New</span
       >
       <ng-template #controlName>
@@ -24,7 +24,7 @@
           type="button"
           class="btn btn-danger btn-sm ms-2"
           (click)="deleteControl()"
-          *ngIf="!addMode"
+          *ngIf="!(mode === ControlMode.Add)"
         >
           DELETE
         </button></span
@@ -34,7 +34,7 @@
 </div>
 <div class="row">
   <div class="col">
-    <form class="w-75" [formGroup]="controlForm">
+    <form [formGroup]="controlForm">
       <div class="row mb-4 align-items-center">
         <div class="col">
           <label for="name" class="mb-2"
