--- a/client/src/app/form/form.component.html
+++ b/client/src/app/form/form.component.html
@@ -64,6 +64,8 @@
               type="button"
               class="btn btn-success btn-sm ms-3"
               (click)="addControl()"
+              [routerLink]="['.']"
+              fragment="controlConfig"
             >
               ADD
             </button></span
