--- a/client/src/app/forms/forms.component.html
+++ b/client/src/app/forms/forms.component.html
@@ -1,33 +1,35 @@
-<div class="row mb-2">
-  <div class="col">
-    <h1>
-      Reports<span
-        ><button
-          class="btn btn-success ms-3"
-          routerLink="/form"
-          [queryParams]="{ addMode: true }"
+<div class="table-container">
+  <div class="row mb-2">
+    <div class="col">
+      <h1>
+        Reports<span
+          ><button
+            class="btn btn-success ms-3"
+            routerLink="/form"
+            [queryParams]="{ addMode: true }"
+          >
+            ADD
+          </button></span
         >
-          ADD
-        </button></span
-      >
-    </h1>
+      </h1>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col">
-    <table class="table table-striped table-hover table-responsive">
-      <thead>
-        <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Description</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let form of forms" routerLink="/form/{{ form.id }}">
-          <td>{{ form.name }}</td>
-          <td>{{ form.description }}</td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="row">
+    <div class="col">
+      <table class="table table-striped table-hover table-responsive">
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let form of forms" routerLink="/form/{{ form.id }}">
+            <td>{{ form.name }}</td>
+            <td>{{ form.description }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
