--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -12,6 +12,12 @@ button {
 }
 
 table {
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 0.5rem;
+  box-shadow: 2x 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.table-container {
+  border: 1px solid rgba(236, 240, 241);
+  padding: 25px;
+  border-radius: 1rem;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
 }
