--- a/client/src/app/client/client.component.html
+++ b/client/src/app/client/client.component.html
@@ -35,7 +35,7 @@
       <span>
         <button
           id="generateReport"
-          class="btn btn-primary"
+          class="btn btn-info"
           (click)="generateReport()"
           type="submit"
           [disabled]="!sourceFile || selectedTemplate.length === 0"
