--- a/client/src/app/form/form.component.html
+++ b/client/src/app/form/form.component.html
@@ -23,6 +23,15 @@
       </h1>
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+      <p class="lead">
+        Set report configuration to describe the structure of a given layout.
+        Layouts are comprised of individual controls that appear on created
+        reports based on the Excel source data provided by you.
+      </p>
+    </div>
+  </div>
   <form
     id="formConfig"
     [formGroup]="formConfig"
