--- a/client/src/app/forms/forms.component.html
+++ b/client/src/app/forms/forms.component.html
@@ -1,21 +1,29 @@
-<div class="table-container">
-  <div class="row mb-2">
-    <div class="col">
-      <h1>
-        Reports<span
-          ><button
-            class="btn btn-success ms-3"
-            routerLink="/form"
-            [queryParams]="{ addMode: true }"
-          >
-            ADD
-          </button></span
+<div class="row mb-2">
+  <div class="col">
+    <h1>
+      Reports<span
+        ><button
+          class="btn btn-success ms-3"
+          routerLink="/form"
+          [queryParams]="{ addMode: true }"
         >
-      </h1>
-    </div>
+          ADD
+        </button></span
+      >
+    </h1>
   </div>
-  <div class="row">
-    <div class="col">
+</div>
+<div class="row">
+  <div class="col">
+    <p class="lead">
+      Get started by selecting or creating a report layout. Layouts are used
+      during the report generation process.
+    </p>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <div class="table-container">
       <table class="table table-striped table-hover table-responsive">
         <thead>
           <tr>
