--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="row mb-3" routerLink="/forms">
-  <div class="col"><h3>Reports</h3></div>
+<div class="row mb-3" routerLink="/layouts">
+  <div class="col"><h3>Layouts</h3></div>
   <hr />
   <div>Access your reports to view, edit or delete your layout.</div>
 </div>
