--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -2,20 +2,20 @@
   <div class="row mb-2">
     <div class="col">
       <h1 class="mb-3">
-        Report Setting -<span
+        Layout Setting -<span
           class="ms-2 fw-bold"
-          *ngIf="addMode; else formName"
+          *ngIf="addMode; else layoutName"
           >New</span
         >
-        <ng-template #formName>
-          <span class="ms-2 fw-bold">{{ form?.name }}</span>
+        <ng-template #layoutName>
+          <span class="ms-2 fw-bold">{{ layout?.name }}</span>
         </ng-template>
         <span
           ><button
             class="btn btn-success btn-sm ms-3"
             type="submit"
             form="formConfig"
-            [disabled]="!formConfig.dirty"
+            [disabled]="!layoutConfig.dirty"
           >
             SAVE
           </button></span
@@ -24,7 +24,7 @@
           ><button
             type="button"
             class="btn btn-danger btn-sm ms-2"
-            (click)="deleteForm()"
+            (click)="deleteLayout()"
             *ngIf="!addMode"
           >
             DELETE
@@ -36,16 +36,16 @@
   <div class="row">
     <div class="col">
       <p class="lead">
-        Set report configuration to describe the structure of a given layout.
-        Layouts are comprised of individual controls that appear on created
-        reports based on the Excel source data provided by you.
+        Set configuration to describe the structure of a given layout. Layouts
+        are comprised of individual controls that appear on created reports
+        based on the Excel source data provided by you.
       </p>
     </div>
   </div>
   <form
     id="formConfig"
-    [formGroup]="formConfig"
-    (ngSubmit)="saveForm()"
+    [formGroup]="layoutConfig"
+    (ngSubmit)="saveLayout()"
     class="mb-3"
   >
     <div class="row mb-4">
@@ -102,7 +102,7 @@
           </thead>
           <tbody>
             <tr
-              *ngFor="let control of form?.controls; let i = index"
+              *ngFor="let control of layout?.controls; let i = index"
               (click)="selectControl(control)"
               [routerLink]="['.']"
               fragment="controlConfig"
@@ -120,8 +120,8 @@
   </form>
 </section>
 <section id="controlConfig">
-  <app-form-control
+  <app-layout-control
     *ngIf="showControlConfig"
     (controlDeleted)="onControlDeleted()"
-  ></app-form-control>
+  ></app-layout-control>
 </section>
