--- a/client/src/app/report/report.component.html
+++ b/client/src/app/report/report.component.html
@@ -1,6 +1,6 @@
 <div class="row mb-2 d-flex justify-content-center">
   <div class="col">
-    <h1>{{ reportLayout?.name }} - {{ reportClient?.name }}</h1>
+    <h1>{{ reportLayout?.name }}</h1>
   </div>
 </div>
 <form #generatedReport="ngForm" class="w-100">
