--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,8 +3,8 @@
   <hr />
   <div>Access your reports to view, edit or delete your layout.</div>
 </div>
-<div class="row mb-3" routerLink="/clients">
-  <div class="col"><h3>Clients</h3></div>
+<div class="row mb-3" routerLink="/generate">
+  <div class="col"><h3>Generate Reports</h3></div>
   <hr />
-  <div>Access client information to view, edit or delete your clients.</div>
+  <div>Generate reports based on defined layouts.</div>
 </div>
