--- a/client/src/app/layouts/layouts.component.html
+++ b/client/src/app/layouts/layouts.component.html
@@ -24,7 +24,10 @@
 <div class="row">
   <div class="col">
     <div class="table-container">
-      <table class="table table-striped table-hover table-responsive">
+      <table
+        *ngIf="layouts.length > 0; else noLayouts"
+        class="table table-striped table-hover table-responsive"
+      >
         <thead>
           <tr>
             <th scope="col">Name</th>
@@ -41,6 +44,11 @@
           </tr>
         </tbody>
       </table>
+      <ng-template #noLayouts>
+        <p class="lead">
+          No layouts found! Hit the 'ADD' button to start creating layouts.
+        </p>
+      </ng-template>
     </div>
   </div>
 </div>
