include styling changes

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -6,5 +6,5 @@
 <div class="row mb-3" routerLink="/generate">
   <div class="col"><h3>Generate Reports</h3></div>
   <hr />
-  <div>Generate reports based on defined layouts.</div>
+  <div>Generate reports from Excel.</div>
 </div>
