--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -42,11 +42,12 @@
       </p>
     </div>
   </div>
+  <hr />
   <form
     id="formConfig"
     [formGroup]="layoutConfig"
     (ngSubmit)="saveLayout()"
-    class="mb-3"
+    class="mb-3 mt-3"
   >
     <div class="row mb-4">
       <div class="col-6">
