--- a/client/src/app/layouts/layouts.component.html
+++ b/client/src/app/layouts/layouts.component.html
@@ -21,13 +21,11 @@
     </p>
   </div>
 </div>
+<hr />
 <div class="row">
   <div class="col">
-    <div class="table-container">
-      <table
-        *ngIf="layouts.length > 0; else noLayouts"
-        class="table table-striped table-hover table-responsive"
-      >
+    <div *ngIf="layouts.length > 0; else noLayouts" class="table-container">
+      <table class="table table-striped table-hover table-responsive">
         <thead>
           <tr>
             <th scope="col">Name</th>
@@ -44,11 +42,11 @@
           </tr>
         </tbody>
       </table>
-      <ng-template #noLayouts>
-        <p class="lead">
-          No layouts found! Hit the 'ADD' button to start creating layouts.
-        </p>
-      </ng-template>
     </div>
   </div>
 </div>
+<ng-template #noLayouts>
+  <div class="row">
+    <p class="lead mt-3">No layouts found.</p>
+  </div>
+</ng-template>
