make login form reactive

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -21,25 +21,31 @@
   </div>
   <form
     *ngIf="!(userService.currentUser$ | async)"
-    #loginForm="ngForm"
-    class="d-flex w-50"
+    [formGroup]="loginForm"
+    class="d-flex w-75"
     (ngSubmit)="login()"
     autocomplete="off"
   >
     <input
       name="username"
-      [(ngModel)]="model.username"
       class="form-control me-2"
       type="text"
       placeholder="Username"
+      formControlName="username"
     />
     <input
       name="password"
-      [(ngModel)]="model.password"
       class="form-control me-3"
       type="password"
       placeholder="Password"
+      formControlName="password"
     />
-    <button class="btn btn-success me-5" type="submit">Login</button>
+    <button
+      class="btn btn-success me-5"
+      type="submit"
+      [disabled]="!loginForm.valid"
+    >
+      Login
+    </button>
   </form>
 </nav>
