misc styling changes

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,10 +1,26 @@
-<div class="row mb-3" routerLink="/layouts">
-  <div class="col"><h3>Layouts</h3></div>
+<div class="row mb-4" routerLink="/layouts">
+  <div class="col mb-3">
+    <h3>Layouts<i class="bi bi-columns ms-2"></i></h3>
+  </div>
   <hr />
-  <div>Access your reports to view, edit or delete your layout.</div>
+  <p class="lead">Access your reports to view, edit or delete your layout.</p>
 </div>
-<div class="row mb-3" routerLink="/generate">
-  <div class="col"><h3>Generate Reports</h3></div>
+<div class="row mb-4" routerLink="/generate">
+  <div class="col mb-3">
+    <h3>
+      Generate Reports from Excel<i class="bi bi-file-spreadsheet ms-2"></i>
+    </h3>
+  </div>
   <hr />
-  <div>Generate reports from Excel.</div>
+  <p class="lead">
+    Generate reports by choosing a layout and uploading an Excel workbook that
+    you provide.
+  </p>
+</div>
+<div class="row">
+  <div class="col mb-3">
+    <h3>Help<i class="bi bi-patch-question ms-2"></i></h3>
+  </div>
+  <hr />
+  <p class="lead">Get help on how to use ReportJewel.</p>
 </div>
