--- a/client/src/app/layout-control/layout-control.component.html
+++ b/client/src/app/layout-control/layout-control.component.html
@@ -38,7 +38,7 @@
       <div class="row mb-4 align-items-center">
         <div class="col">
           <label for="name" class="mb-2"
-            >Name<i class="bi bi-card-text ms-2"></i
+            >Name<i class="bi bi-info-circle ms-2"></i
           ></label>
           <input
             id="name"
@@ -50,7 +50,7 @@
         </div>
         <div class="col">
           <label for="description" class="mb-2"
-            >Description<i class="bi bi-card-text ms-2"></i
+            >Description<i class="bi bi-info-circle ms-2"></i
           ></label>
           <input
             id="description"
@@ -64,7 +64,7 @@
       <div class="row mb-4 align-items-center">
         <div class="col">
           <label for="cellSource" class="mb-2"
-            >Cell Source<i class="bi bi-card-text ms-2"></i
+            >Cell Source<i class="bi bi-info-circle ms-2"></i
           ></label>
           <input
             id="cellSource"
@@ -76,7 +76,7 @@
         </div>
         <div class="col">
           <label for="label" class="mb-2"
-            >Label<i class="bi bi-card-text ms-2"></i
+            >Label<i class="bi bi-info-circle ms-2"></i
           ></label>
           <input
             id="label"
@@ -88,7 +88,7 @@
         </div>
         <div class="col">
           <label class="form-check-label" for="required"
-            >Required<i class="bi bi-check2-square ms-2"></i
+            >Required<i class="bi bi-info-circle ms-2"></i
           ></label>
           <div class="form-check form-switch">
             <input
@@ -104,7 +104,7 @@
       <div class="row mb-4 align-items-center">
         <div class="col">
           <label for="section" class="mb-2"
-            >Section<i class="bi bi-123 ms-2"></i
+            >Section<i class="bi bi-info-circle ms-2"></i
           ></label>
           <input
             id="section"
@@ -116,7 +116,7 @@
         </div>
         <div class="col">
           <label for="row" class="mb-2"
-            >Row<i class="bi bi-123 ms-2"></i
+            >Row<i class="bi bi-info-circle ms-2"></i
           ></label>
           <input
             id="row"
@@ -128,7 +128,7 @@
         </div>
         <div class="col">
           <label for="order" class="mb-2"
-            >Order<i class="bi bi-123 ms-2"></i
+            >Order<i class="bi bi-info-circle ms-2"></i
           ></label>
           <input
             id="order"
