--- a/client/src/app/layouts/layouts.component.html
+++ b/client/src/app/layouts/layouts.component.html
@@ -3,7 +3,7 @@
     <h1>
       Layouts<span
         ><button
-          class="btn btn-success ms-3"
+          class="btn btn-success btn-sm ms-3"
           routerLink="/layout"
           [queryParams]="{ addMode: true }"
         >
