--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ngx-spinner type="line-spin-clockwise-fade"></ngx-spinner>
+<ngx-spinner type="line-spin-clockwise-fade">Loading ...</ngx-spinner>
 <app-nav></app-nav>
 <div class="container-fluid p-5 mt-5 w-75">
   <router-outlet></router-outlet>
