--- a/client/src/app/generate/generate.component.html
+++ b/client/src/app/generate/generate.component.html
@@ -14,7 +14,9 @@
 <form #generateReportForm="ngForm" class="w-75">
   <div class="row mb-3">
     <div class="col-6">
-      <label for="template" class="mb-2"> Layout</label>
+      <label for="template" class="mb-2">
+        Layout<i class="bi bi-info-circle ms-2"></i
+      ></label>
       <select
         id="selectedLayout"
         class="form-control"
@@ -31,13 +33,17 @@
       </select>
     </div>
     <div class="col-6">
-      <label for="client" class="mb-2"> Client Name</label>
+      <label for="client" class="mb-2">
+        Client Name<i class="bi bi-info-circle ms-2"></i
+      ></label>
       <input type="text" name="client" class="form-control" id="client" />
     </div>
   </div>
   <div class="row mb-5">
     <div class="col-6">
-      <label for="sourceFile" class="mb-2">Source File</label>
+      <label for="sourceFile" class="mb-2"
+        >Source File<i class="bi bi-info-circle ms-2"></i
+      ></label>
       <input
         id="sourceFile"
         class="form-control"
@@ -53,7 +59,7 @@
       <span>
         <button
           id="generateReport"
-          class="btn btn-info"
+          class="btn btn-success"
           (click)="generateReport()"
           type="submit"
           [disabled]="!sourceFile || selectedLayout.length === 0"
