--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -6,111 +6,99 @@
   </div>
 </div>
 <ng-template #registerModal>
-  <div class="row">
-    <div class="col">
-      <div class="modal-header text-center">
-        <h4 class="modal-title w-100">Register New User</h4>
-        <button
-          type="button"
-          class="btn-close close pull-right"
-          aria-label="Close"
-          (click)="registerModalRef?.hide()"
-        >
-          <span aria-hidden="true" class="visually-hidden">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body ms-3">
-        <form
-          id="registerForm"
-          [formGroup]="registerForm"
-          (ngSubmit)="register()"
-        >
-          <div class="row mb-2">
-            <div class="col-4">
-              <label for="username" class="mb-2 fw-bold">Username:</label>
-            </div>
-            <div class="col-6">
-              <input
-                id="username"
-                type="text"
-                class="form-control-sm rounded"
-                placeholder="e.g. jklebitz"
-                formControlName="username"
-              />
-            </div>
-          </div>
-          <div class="row mb-2">
-            <div class="col-4">
-              <label for="password" class="mb-2 fw-bold">Password:</label>
-            </div>
-            <div class="col-6">
-              <input
-                id="password"
-                type="password"
-                class="form-control-sm rounded"
-                formControlName="password"
-              />
-            </div>
-          </div>
-          <div class="row mb-2">
-            <div class="col-4">
-              <label for="firstName" class="mb-2 fw-bold">First Name:</label>
-            </div>
-            <div class="col-6">
-              <input
-                id="firstName"
-                type="text"
-                class="form-control-sm rounded"
-                placeholder="e.g. Johnny"
-                formControlName="firstName"
-              />
-            </div>
-          </div>
-          <div class="row mb-2">
-            <div class="col-4">
-              <label for="lastName" class="mb-2 fw-bold">Last Name:</label>
-            </div>
-            <div class="col-6">
-              <input
-                id="lastName"
-                type="text"
-                class="form-control-sm rounded"
-                placeholder="e.g. Klebitz"
-                formControlName="lastName"
-              />
-            </div>
-          </div>
-          <div class="row mb-2">
-            <div class="col-4">
-              <label for="dateOfBirth" class="mb-2 fw-bold"
-                >Date of Birth:</label
-              >
-            </div>
-            <div class="col-6">
-              <input
-                id="dateOfBirth"
-                type="text"
-                placeholder="e.g. June 10, 1994"
-                class="form-control-sm rounded"
-                formControlName="dateOfBirth"
-                bsDatepicker
-              />
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
+  <div class="modal-header text-center">
+    <h4 class="modal-title w-100">Register New User</h4>
+    <button
+      type="button"
+      class="btn-close close pull-right"
+      aria-label="Close"
+      (click)="registerModalRef?.hide()"
+    >
+      <span aria-hidden="true" class="visually-hidden">&times;</span>
+    </button>
   </div>
-  <div class="row d-flex justify-content-center mb-4">
-    <div class="col-4">
-      <button
-        class="btn btn-success"
-        type="submit"
-        form="registerForm"
-        [disabled]="!registerForm.valid"
-      >
-        REGISTER
-      </button>
-    </div>
+  <div class="modal-body ms-3">
+    <form id="registerForm" [formGroup]="registerForm" (ngSubmit)="register()">
+      <div class="row mb-2">
+        <div class="col-4">
+          <label for="username" class="mb-2 fw-bold">Username:</label>
+        </div>
+        <div class="col-6">
+          <input
+            id="username"
+            type="text"
+            class="form-control-sm rounded"
+            placeholder="e.g. jklebitz"
+            formControlName="username"
+          />
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col-4">
+          <label for="password" class="mb-2 fw-bold">Password:</label>
+        </div>
+        <div class="col-6">
+          <input
+            id="password"
+            type="password"
+            class="form-control-sm rounded"
+            formControlName="password"
+          />
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col-4">
+          <label for="firstName" class="mb-2 fw-bold">First Name:</label>
+        </div>
+        <div class="col-6">
+          <input
+            id="firstName"
+            type="text"
+            class="form-control-sm rounded"
+            placeholder="e.g. Johnny"
+            formControlName="firstName"
+          />
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col-4">
+          <label for="lastName" class="mb-2 fw-bold">Last Name:</label>
+        </div>
+        <div class="col-6">
+          <input
+            id="lastName"
+            type="text"
+            class="form-control-sm rounded"
+            placeholder="e.g. Klebitz"
+            formControlName="lastName"
+          />
+        </div>
+      </div>
+      <div class="row mb-2">
+        <div class="col-4">
+          <label for="dateOfBirth" class="mb-2 fw-bold">Date of Birth:</label>
+        </div>
+        <div class="col-6">
+          <input
+            id="dateOfBirth"
+            type="text"
+            placeholder="e.g. June 10, 1994"
+            class="form-control-sm rounded"
+            formControlName="dateOfBirth"
+            bsDatepicker
+          />
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="text-center mb-4">
+    <button
+      class="btn btn-success w-25"
+      type="submit"
+      form="registerForm"
+      [disabled]="!registerForm.valid"
+    >
+      Register
+    </button>
   </div>
 </ng-template>
