--- a/client/src/app/layouts/layouts.component.html
+++ b/client/src/app/layouts/layouts.component.html
@@ -24,7 +24,7 @@
 <hr />
 <div class="row">
   <div class="col">
-    <div *ngIf="layouts.length > 0; else noLayouts" class="table-container">
+    <div *ngIf="layouts.length > 0" class="table-container">
       <table class="table table-striped table-hover table-responsive">
         <thead>
           <tr>
@@ -45,8 +45,8 @@
     </div>
   </div>
 </div>
-<ng-template #noLayouts>
-  <div class="row">
-    <p class="lead mt-3">No layouts found.</p>
-  </div>
-</ng-template>
+<div class="row" *ngIf="showNoLayouts">
+  <p class="lead mt-3">
+    No layouts found. Hit the 'ADD' button above to create a new layout.
+  </p>
+</div>
