--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -17,10 +17,12 @@
     you provide.
   </p>
 </div>
-<div class="row">
+<div class="row" routerLink="/guide">
   <div class="col mb-3">
-    <h3>Help<i class="bi bi-patch-question ms-2"></i></h3>
+    <h3>User Guide<i class="bi bi-patch-question ms-2"></i></h3>
   </div>
   <hr />
-  <p class="lead">Get help on how to use ReportJewel.</p>
+  <p class="lead">
+    Read the user guide to get assistance on using ReportJewel.
+  </p>
 </div>
