added pagination to layouts

--- a/client/src/app/layouts/layouts.component.html
+++ b/client/src/app/layouts/layouts.component.html
@@ -50,3 +50,19 @@
     No layouts found. Hit the 'ADD' button above to create a new layout.
   </p>
 </div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+  <pagination
+    [boundaryLinks]="true"
+    [totalItems]="pagination.totalItems"
+    [itemsPerPage]="pagination.itemsPerPage"
+    [maxSize]="5"
+    [(ngModel)]="pagination.currentPage"
+    (pageChanged)="pageChanged($event)"
+    previousText="&lsaquo;"
+    nextText="&rsaquo;"
+    firstText="&laquo;"
+    lastText="&raquo;"
+  >
+  </pagination>
+</div>
