--- a/client/src/app/generate/generate.component.html
+++ b/client/src/app/generate/generate.component.html
@@ -2,7 +2,7 @@
 <div class="row mb-2">
   <div class="col">
     <p class="lead">
-      To generate a report from Excel, begin by selecting a
+      To generatee a report from Excel, begin by selecting a
       <strong>layout</strong> for the report. Then enter the
       <strong>client name</strong> which will appear in the report header.
       Finally, select the source file which contains the data to be displayed in
