--- a/client/src/app/layouts/layouts.component.html
+++ b/client/src/app/layouts/layouts.component.html
@@ -18,31 +18,38 @@
   </div>
 </div>
 <hr />
-<div class="row">
-  <div class="col">
-    <div *ngIf="layouts.length > 0" class="table-container">
-      <table class="table table-striped table-hover table-responsive">
-        <thead>
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let layout of layouts" (click)="selectLayout(layout.id)">
-            <td>{{ layout.name }}</td>
-            <td>{{ layout.description }}</td>
-          </tr>
-        </tbody>
-      </table>
+<ng-container *ngIf="layouts">
+  <div *ngIf="layouts.length > 0; else noLayouts" class="row">
+    <div class="col">
+      <div class="table-container">
+        <table class="table table-striped table-hover table-responsive">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Description</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr
+              *ngFor="let layout of layouts"
+              (click)="selectLayout(layout.id)"
+            >
+              <td>{{ layout.name }}</td>
+              <td>{{ layout.description }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-</div>
-<div class="row" *ngIf="showNoLayouts">
-  <p class="lead mt-3">
-    No layouts found. Hit the 'ADD' button above to create a new layout.
-  </p>
-</div>
+  <ng-template #noLayouts>
+    <div class="row">
+      <p class="lead mt-3">
+        No layouts found. Hit the 'ADD' button above to create a new layout.
+      </p>
+    </div>
+  </ng-template>
+</ng-container>
 
 <div class="d-flex justify-content-center" *ngIf="pagination">
   <pagination
