update pic path to correct

--- a/client/src/app/guide/guide.component.html
+++ b/client/src/app/guide/guide.component.html
@@ -16,7 +16,7 @@
       </p>
       <img
         class="img-fluid"
-        src="./assets/photos/layouts-menu-item.png"
+        src="/assets/photos/layout-menu-item.png"
         alt="layout pic"
       />
     </div>
