update guide section and styling

--- a/client/src/app/generate/generate.component.html
+++ b/client/src/app/generate/generate.component.html
@@ -1,17 +1,16 @@
 <h1>Generate Report From Excel</h1>
 <div class="row mb-2">
   <div class="col">
-    <p class="lead">
-      To generate a report from Excel, begin by selecting a
-      <strong>layout</strong> for the report. Then enter the
-      <strong>client name</strong> which will appear in the report header.
-      Finally, select the source file which contains the data to be displayed in
-      the selected layout.
+    <p>
+      To generate a report from Excel, begin by selecting a layout for the
+      report. Then enter the client name which will appear in the generated
+      report header. Finally, select the source file which contains the data to
+      be displayed in the selected layout.
     </p>
   </div>
 </div>
 <hr />
-<form [formGroup]="generateForm" class="w-75">
+<form [formGroup]="generateForm" class="w-75 mt-5">
   <div class="row mb-3">
     <div class="col-6">
       <label for="template" class="mb-2">
