--- a/client/src/app/guide/guide.component.html
+++ b/client/src/app/guide/guide.component.html
@@ -1,24 +1,141 @@
-<div class="row">
-  <div class="col"><h1>How To Use</h1></div>
+<div class="guide-container">
+  <div class="row">
+    <div class="col"><h1>How To Use</h1></div>
+  </div>
+  <hr />
+  <section id="step1" class="mb-5">
+    <div class="row">
+      <div class="col">
+        <h2>Step 1: Create a Layout</h2>
+      </div>
+    </div>
+    <div class="row mb-5">
+      <div class="col">
+        <p>
+          Creating a layout is simple. First, select the 'Layouts' option from
+          the home page.
+        </p>
+        <img
+          class="img-fluid"
+          src="/assets/photos/layouts-main-menu-item.png"
+          alt="layout menu item"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>Create a new layout by hitting the 'ADD' button.</p>
+        <img src="/assets/photos/layouts-add.png" alt="layout add" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>
+          Enter an appropriate name and description, then hit the save button.
+        </p>
+        <img src="/assets/photos/layout-create-new.png" alt="layout save" />
+      </div>
+    </div>
+  </section>
+  <hr />
+  <section id="step2" class="mb-5">
+    <div class="row">
+      <div class="col">
+        <h2>Step 2: Adding Controls</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>
+          To add a control, hit the 'ADD' button in the 'Controls' section of
+          the layout setting page. A new section will appear underneath the main
+          layout settings to add or update a control.
+        </p>
+        <img
+          class="img-fluid"
+          src="/assets/photos/layout-control-add.png"
+          alt="layout menu item"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>
+          Enter values into each field as instructed. Hover over the '<i
+            class="bi bi-info-circle"
+          ></i
+          >' to get more info on the field. Hit 'SAVE' when completed.
+        </p>
+        <img
+          src="/assets/photos/layout-control-edit.png"
+          alt="layout control edit"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>
+          The control now appears as part of the layout. Add as many controls as
+          desired!
+        </p>
+        <img
+          src="/assets/photos/layout-control-saved.png"
+          alt="layout control saved"
+        />
+      </div>
+    </div>
+  </section>
+  <section id="step3">
+    <div class="row">
+      <div class="col">
+        <h2>Step 3: Generating a Report</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>
+          With a created layout and control, we are ready to generate reports.
+          In the main menu, select the 'Generate Reports from Excel' option.
+        </p>
+        <img
+          src="/assets/photos/generate-report-menu-item.png"
+          alt="generate report menu item"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>
+          Select a layout for report creation. In this example, the
+          'test_layout' layout is used. When the report is created, we're
+          expecting it to pull the value contained in D5 and present this as the
+          purchase price on the report for a client named 'Bigglesworth Inc.'. A
+          workbook is supplied using the 'Source File' option with the data that
+          we want to present in the report. Hit the 'CREATE REPORT' button when
+          ready.
+        </p>
+        <img
+          src="/assets/photos/generate-report-pre.png"
+          alt="generate report before"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>
+          A report is generated using the supplied source data and layout that
+          was selected. Hover over the '<i class="bi bi-book"></i>' icon to view
+          the description that was set on the control.
+          <em
+            >Upcoming features include: export to PDF, e-mail & send as
+            shareable link.</em
+          >
+        </p>
+        <img
+          src="/assets/photos/generate-report-post.png"
+          alt="generate report after"
+        />
+      </div>
+    </div>
+  </section>
 </div>
-<hr />
-<section id="step1">
-  <div class="row">
-    <div class="col">
-      <h2>Step 1: Create a Layout</h2>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <p>
-        Creating a layout is simple. First, select the 'Layouts' option from the
-        home page.
-      </p>
-      <img
-        class="img-fluid"
-        src="/assets/photos/layout-menu-item.png"
-        alt="layout pic"
-      />
-    </div>
-  </div>
-</section>
