--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <h3>Layouts<i class="bi bi-columns ms-2"></i></h3>
   </div>
   <hr />
-  <p class="lead">Access your reports to view, edit or delete your layout.</p>
+  <p>Access your reports to view, edit or delete your layout.</p>
 </div>
 <div class="row mb-4" routerLink="/generate">
   <div class="col mb-3">
@@ -12,7 +12,7 @@
     </h3>
   </div>
   <hr />
-  <p class="lead">
+  <p>
     Generate reports by choosing a layout and uploading an Excel workbook that
     you provide.
   </p>
@@ -22,7 +22,5 @@
     <h3>User Guide<i class="bi bi-patch-question ms-2"></i></h3>
   </div>
   <hr />
-  <p class="lead">
-    Read the user guide to get assistance on using ReportJewel.
-  </p>
+  <p>Read the user guide to get assistance on using ReportJewel.</p>
 </div>
