--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="col mb-2">
     <h3>Register</h3>
     <hr />
-    <p class="lead">Create a new account and start creating your templates.</p>
+    <p>Create a new account and start creating your templates.</p>
   </div>
 </div>
 <ng-template #registerModal>
