--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -1,4 +1,4 @@
-<section id="reportConfig">
+<section id="reportConfig" class="mb-5">
   <div class="row mb-2">
     <div class="col">
       <h1 class="mb-3">
@@ -35,7 +35,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <p class="lead">
+      <p>
         Set configuration to describe the structure of a given layout. Layouts
         are comprised of individual controls that appear on created reports
         based on the Excel source data provided by you.
@@ -47,7 +47,7 @@
     id="formConfig"
     [formGroup]="layoutConfig"
     (ngSubmit)="saveLayout()"
-    class="mb-3 mt-3"
+    class="mt-4"
   >
     <div class="row mb-4">
       <div class="col-6">
@@ -77,51 +77,70 @@
     </div>
     <div class="row" *ngIf="!(mode === Mode.Add)">
       <div class="col">
-        <h2>
-          Controls<i class="bi bi-card-list ms-2"></i
-          ><span
-            ><button
-              type="button"
-              class="btn btn-success btn-sm ms-3"
-              (click)="addControl()"
-              [routerLink]="['.']"
-              fragment="controlConfig"
+        <div class="controls-header mb-4">
+          <h2>
+            Controls<i class="bi bi-card-list ms-2 mb-5"></i
+            ><span
+              ><button
+                type="button"
+                class="btn btn-success btn-sm ms-3"
+                (click)="addControl()"
+                [routerLink]="['.']"
+                fragment="controlConfig"
+              >
+                ADD
+              </button></span
             >
-              ADD
-            </button></span
+          </h2>
+        </div>
+        <hr />
+        <ng-container *ngIf="layout">
+          <table
+            *ngIf="layout.controls.length > 0; else noControls"
+            class="table table-striped table-hover table-responsive"
           >
-        </h2>
-        <table class="table table-striped table-hover table-responsive">
-          <thead>
-            <tr>
-              <th scope="col">Name<i class="bi bi-info-circle ms-2"></i></th>
-              <th scope="col">
-                Cell Source<i class="bi bi-info-circle ms-2"></i>
-              </th>
-              <th scope="col">Section<i class="bi bi-info-circle ms-2"></i></th>
-              <th scope="col">Row<i class="bi bi-info-circle ms-2"></i></th>
-              <th scope="col">Order<i class="bi bi-info-circle ms-2"></i></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr
-              *ngFor="let control of layout?.controls; let i = index"
-              (click)="selectControl(control)"
-              [routerLink]="['.']"
-              fragment="controlConfig"
-            >
-              <td>{{ control.name }}</td>
-              <td>{{ control.cellSource }}</td>
-              <td>{{ control.section }}</td>
-              <td>{{ control.row }}</td>
-              <td>{{ control.order }}</td>
-            </tr>
-          </tbody>
-        </table>
+            <thead>
+              <tr>
+                <th scope="col">Name<i class="bi bi-info-circle ms-2"></i></th>
+                <th scope="col">
+                  Cell Source<i class="bi bi-info-circle ms-2"></i>
+                </th>
+                <th scope="col">
+                  Section<i class="bi bi-info-circle ms-2"></i>
+                </th>
+                <th scope="col">Row<i class="bi bi-info-circle ms-2"></i></th>
+                <th scope="col">Order<i class="bi bi-info-circle ms-2"></i></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr
+                *ngFor="let control of layout?.controls; let i = index"
+                (click)="selectControl(control)"
+                [routerLink]="['.']"
+                fragment="controlConfig"
+              >
+                <td>{{ control.name }}</td>
+                <td>{{ control.cellSource }}</td>
+                <td>{{ control.section }}</td>
+                <td>{{ control.row }}</td>
+                <td>{{ control.order }}</td>
+              </tr>
+            </tbody>
+          </table>
+          <ng-template #noControls>
+            <div class="row">
+              <p class="mt-1">
+                No controls found. Hit the 'ADD' button above to create a new
+                control.
+              </p>
+            </div>
+          </ng-template>
+        </ng-container>
       </div>
     </div>
   </form>
 </section>
+<hr />
 <section id="controlConfig">
   <app-layout-control
     *ngIf="showControlConfig"
