--- a/client/src/app/layouts/layouts.component.html
+++ b/client/src/app/layouts/layouts.component.html
@@ -11,7 +11,7 @@
 </div>
 <div class="row">
   <div class="col">
-    <p class="lead">
+    <p>
       Get started by selecting or creating a report layout. Layouts are used
       during the report generation process.
     </p>
@@ -19,7 +19,7 @@
 </div>
 <hr />
 <ng-container *ngIf="layouts">
-  <div *ngIf="layouts.length > 0; else noLayouts" class="row">
+  <div *ngIf="layouts.length > 0; else noLayouts" class="row mt-4">
     <div class="col">
       <div class="table-container">
         <table class="table table-striped table-hover table-responsive">
@@ -44,7 +44,7 @@
   </div>
   <ng-template #noLayouts>
     <div class="row">
-      <p class="lead mt-3">
+      <p class="mt-3">
         No layouts found. Hit the 'ADD' button above to create a new layout.
       </p>
     </div>
